# gerd

./: README.md  example.yaml  pyproject.toml
.github/workflows/: publish.yml  test.yml
gerd/: __init__.py  __main__.py  dataset.py  inspect.ipynb  render.py  shapes.py
network/: covariant_net.py  covariant_net_after_HM.py  covariant_net_before_Head.py  dataloader.py  generate_plots.py  imp_fig.py  inspect_metrics.py  loss.py  net.py  test.py  train.py  utils.py  utils_visualization.py
scripts/: to_mp4.py
tests/: test_config.py  test_render.py
