[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gerd"
dynamic = ["version"]
description = "Generate synthetic event-camera datasets for object tracking tasks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ray",
    "torch",
    "tqdm",
    "pyyaml",
]

[tool.setuptools_scm]

[project.optional-dependencies]
test = ["torchvision"]

[project.scripts]
gerd = "gerd.__main__:cli"
